[tool.poetry]
name = "omnicart-pipeline-Oluwadotun_Ilesanmi"
version = "0.1.0"
description = "A data pipeline for analyzing seller performance in e-commerce systems"
authors = ["Oluwadotun Ilesanmi"]
readme = "README.md"
packages = [{include = "omnicart_pipeline"}]
include = ["omnicart_pipeline/pipeline.cfg"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = ">=2.0.0,<3.0.0"
requests = ">=2.28.0,<3.0.0"
numpy = ">=1.23.0,<2.0.0"
importlib-resources = ">=5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-mock = ">=3.10.0"
black = ">=23.0.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
omnicart-pipeline = "omnicart_pipeline.cli:main"
omnicart-pipeline-Oluwadotun_Ilesanmi = "omnicart_pipeline.cli:main"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3